<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.artistryhub</groupId>
    <artifactId>pob-artistryhub</artifactId>
    <version>1.0-SNAPSHOT</version>
    <dependencies>
        <dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>5.8.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <version>5.8.1</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.assertj</groupId>
		    <artifactId>assertj-core</artifactId>
		    <version>3.21.0</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>jfree</groupId>
		    <artifactId>jfreechart</artifactId>
		    <version>1.0.13</version>
		</dependency>
		<dependency>
		    <groupId>org.fusesource.jansi</groupId>
		    <artifactId>jansi</artifactId>
		    <version>2.4.0</version>
		</dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>